# merco-llmproxy

./: Cargo.toml  README.md
examples/: auth_test.rs  tool_example.rs
macros/: Cargo.toml
macros/src/: lib.rs
merco-llmproxy/: Cargo.toml
merco-llmproxy/src/: tools.rs
src/: config.rs  lib.rs  tools.rs  traits.rs
src/providers/: mod.rs  ollama.rs  openai.rs
