[dependencies]
async-trait = "0.1"
bytes = "1.5"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
merco-macros = { path = "../macros" }
lazy_static = "1.4" 